--- a/keyboard/build.gradle
+++ b/keyboard/build.gradle
@@ -1,5 +1,29 @@
 apply plugin: 'com.android.library'
 
+ext {
+    bintrayRepo = 'maven'
+    bintrayName = 'android-decimal-keyboard'
+
+    publishedGroupId = 'com.fathzer.android'
+    libraryName = 'Keyboard'
+    artifact = 'keyboard'
+
+    libraryDescription = 'A localized Android decimal keyboard (ex: in France, decimal separator is a comma).'
+
+    siteUrl = 'https://github.com/fathzer/AndroidWidgets'
+    gitUrl = 'https://github.com/fathzer/AndroidWidgets'
+
+    libraryVersion = '0.0.1'
+
+    developerId = 'fathzer'
+    developerName = 'Jean-Marc Astesana'
+    developerEmail = 'admin@fathzer.com'
+
+    licenseName = 'The Apache Software License, Version 2.0'
+    licenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+    allLicenses = ["Apache-2.0"]
+}
+
 android {
     compileSdkVersion 22
     buildToolsVersion "21.1.2"
@@ -8,7 +32,7 @@ android {
         minSdkVersion 9
         targetSdkVersion 22
         versionCode 1
-        versionName "1.0"
+        versionName "0.0.1"
     }
     buildTypes {
         release {
@@ -21,3 +45,6 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
 }
+
+apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/installv1.gradle'
+apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/bintrayv1.gradle'
